--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         },
         "laravel": {
             "providers": [
-                "Barryvdh\\Elfinder\\ElfinderServiceProvider"
+                "Hungnm\\Elfinder\\ElfinderServiceProvider"
             ]
         }
     },
