--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "5.0.x|5.1.x|5.2.x|5.3.x|5.4.x|5.5.x|5.6.x",
-        "studio-42/elfinder": "~2.1.10",
+        "studio-42/elfinder": "^2.1",
         "barryvdh/elfinder-flysystem-driver": "^0.1.4|^0.2",
         "league/flysystem": "^1.0",
         "league/flysystem-cached-adapter": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "Barryvdh\\Elfinder\\": "src/"
+            "Hungnm\\Elfinder\\": "src/"
         }
     },
     "extra": {
